@@ -17,6 +17,7 @@ NEWS
   * prevent crash in certain php-fcgi configurations (#841)
   * add IdleServers and Scoreboard directives in ?auto mode for mod_status (#1507)
   * open log immediately after daemonizing, fixes SIGPIPEs on startup  (#165)
+  * HTTPS env var should be "on" when using mod_extforward and the X-Forwarded-Proto header is set. (#1499)
 
 - 1.4.18 - 2007-09-09
 
